--- a/views/Game/PaperGame.ejs
+++ b/views/Game/PaperGame.ejs
@@ -18,6 +18,7 @@
         <input type="button" class="col s4 gbtn" value="가위" onclick="chooseWeapon('scissors');" />
         <input type="button" class="col s4 gbtn" value="바위" onclick="chooseWeapon('rock');" />
         <input type="button" class="col s4 gbtn" value="보" onclick="chooseWeapon('paper');" />
+        <input type="button" class="col s4 rbtn" value="다시하기" />
       </div>
     </div>
     <div class="game-score right col s5">     
@@ -25,16 +26,30 @@
             <th class="center-align">승리</th>
             <th class="center-align">패배</th>
             <th class="center-align">비김</th>
+            <th class="center-align"></th>
             <tr>
               <td class="center-align" id="wins">0</td>
               <td class="center-align" id="losses">0</td>
               <td class="center-align" id="ties">0</td>
             </tr>
+            <tr>
+
+
+            </tr>
           </table>
+          <div>
+
+          </div>
+
     </div>
+
   </div>
+
 
   
   <br>
+
+  <script>
+  </script>
 
   
