--- a/public/stylesheet/layout/grid.scss
+++ b/public/stylesheet/layout/grid.scss
@@ -113,7 +113,7 @@ article {
       }
 
       .blue {
-        background-color: blue;
+        background-color: $oc-orange-1;
       }
 
       .yellow {
@@ -182,7 +182,7 @@ article {
 
 .intro {
   text-align: center;
-  padding-top: 4rem;
+  padding-top: 6.5rem;
   line-height: 2rem;
 }
 
