--- a/public/stylesheet/pages/myPage.scss
+++ b/public/stylesheet/pages/myPage.scss
@@ -9,8 +9,25 @@
   }
 
   .intro-title {
-    padding: 3rem 0;
-    border-bottom: 2px solid $oc-gray-1;    
+    padding: 2.5rem 0;
+    margin: 0.5rem;
+    margin-bottom: 1rem;
+    border-bottom: 5px solid $oc-gray-3;    
     
+  }
+
+  table {
+    border-collapse: separate;
+    border-spacing: 0 8px;
+    border: 0;
+  }
+  .table-striped tbody tr:nth-of-type(odd)  {
+    background: ghostwhite !important;
+   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+
+  &:hover {
+    background-color: rgba(0,0,0,.05) !important;
+  }
   }
 }
