음식 삭제 , 오타 수정

--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -80,6 +80,12 @@ article .contentWrap span {
 article .contentWrap img {
   padding-top: 20px;
   width: 150px;
+  padding-bottom: 4rem;
+}
+article .contentWrap .home-start {
+  display: block;
+  font-size: 1.8rem;
+  cursor: pointer;
 }
 article section {
   left: 0;
@@ -346,6 +352,7 @@ aside .next-btn {
   z-index: 2;
   font-size: 2.8rem;
   color: gray;
+  cursor: pointer;
   animation: right-waterfall 1.5s infinite ease-in-out;
 }
 aside .next-btn:hover {
