--- a/public/stylesheet/layout/grid.scss
+++ b/public/stylesheet/layout/grid.scss
@@ -27,6 +27,12 @@ article {
     img {
       padding-top: 20px;
       width: 150px;
+      padding-bottom: 4rem;
+    }
+    .home-start {      
+      display: block;
+        font-size: 1.8rem ;
+        cursor: pointer;
     }
   }
 
