--- a/views/Game/PaperGame.ejs
+++ b/views/Game/PaperGame.ejs
@@ -18,7 +18,7 @@
         <input type="button" class="col s4 gbtn" value="가위" onclick="chooseWeapon('scissors');" />
         <input type="button" class="col s4 gbtn" value="바위" onclick="chooseWeapon('rock');" />
         <input type="button" class="col s4 gbtn" value="보" onclick="chooseWeapon('paper');" />
-        <input type="button" class="col s4 rbtn" value="다시하기" />
+        <input type="button" class="col s4 rbtn" value="다시하기"  disabled/>
       </div>
     </div>
     <div class="game-score right col s5">     
