--- a/views/Game/RouletteGame.ejs
+++ b/views/Game/RouletteGame.ejs
@@ -24,7 +24,9 @@
                             <br />
                             <img id="spin_button" src="../img/spin_off.png" alt="Spin" onClick="startSpin();" />
                             <br /><br />
-                            &nbsp;&nbsp;<a href="#" onClick="resetWheel(); return false;">다시하기</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(리셋)
+                            &nbsp;&nbsp;<a href="#" onClick="resetWheel(); return false;" style="    color: blueviolet;
+                            font-weight: bold;
+                            font-size: 20px;">다시하기</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         </div>
                                 <td width="438" height="582" class="the_wheel" align="center" valign="center">
                                     <canvas id="canvas" width="434" height="434">
