--- a/views/Game/PaperGame.ejs
+++ b/views/Game/PaperGame.ejs
@@ -1,6 +1,6 @@
   <div class="rpsGame">
     <div class="game left col s6">
-      <p class="choose center-align">아래 버튼을 눌러 선택하세요 !</p>
+      <!-- <p class="choose center-align">아래 버튼을 눌러 선택하세요 !</p> -->
       <h5 class="center-align" id="user-title">
         <span>
           사용자
@@ -9,7 +9,7 @@
           컴퓨터
         </span>
       </h5>
-      <h5 class="center-align choice" id="choice" >
+      <h5 class="center-align choice" id="choice">
 
       </h5>
       <br>
@@ -18,38 +18,27 @@
         <input type="button" class="col s4 gbtn" value="가위" onclick="chooseWeapon('scissors');" />
         <input type="button" class="col s4 gbtn" value="바위" onclick="chooseWeapon('rock');" />
         <input type="button" class="col s4 gbtn" value="보" onclick="chooseWeapon('paper');" />
-        <input type="button" class="col s4 rbtn" value="다시하기"  disabled/>
+        <input type="button" class="col s4 rbtn" value="다시하기" disabled />
       </div>
     </div>
-    <div class="game-score right col s5">     
-          <table>
-            <th class="center-align">승리</th>
-            <th class="center-align">패배</th>
-            <th class="center-align">비김</th>
-            <th class="center-align"></th>
-            <tr>
-              <td class="center-align" id="wins">0</td>
-              <td class="center-align" id="losses">0</td>
-              <td class="center-align" id="ties">0</td>
-            </tr>
-            <tr>
-
-
-            </tr>
-          </table>
-          <div>
-
-          </div>
-
+    <div class="game-score right col s5">
+      <table>
+        <th class="center-align">승리</th>
+        <th class="center-align">패배</th>
+        <th class="center-align">비김</th>
+        <th class="center-align"></th>
+        <tr>
+          <td class="center-align" id="wins">0</td>
+          <td class="center-align" id="losses">0</td>
+          <td class="center-align" id="ties">0</td>
+        </tr>
+        <tr>
+        </tr>
+      </table>
+      <div>
+      </div>
     </div>
-
   </div>
-
-
-  
   <br>
-
   <script>
   </script>
-
-  
