--- a/views/Game/SoccerGame.ejs
+++ b/views/Game/SoccerGame.ejs
@@ -1,5 +1,5 @@
 <div class="soccer-game">
-<div class="score-board">
+  <div class="score-board">
     <div class="korea-shots">
       <span>한국 남은슛</span>
       <span id="kr-number">5</span>
@@ -11,13 +11,16 @@
       <span>번</span>
     </div>
     <div class="korea-score">
-      <div class="score-name"><img src="../img/korea.png" alt="flag" width="40%">한국<span id="kr-score" class="panel-score">0</span></div>
+      <div class="score-name"><img src="../img/korea.png" alt="flag" width="40%">한국<span id="kr-score"
+          class="panel-score">0</span></div>
     </div>
     <div class="japen-score">
-      <div class="score-name"><span id="jp-score" class="panel-score">0</span>중국<img src="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Flag_of_the_People%27s_Republic_of_China.svg/225px-Flag_of_the_People%27s_Republic_of_China.svg.png" alt="flag" width="40%"></div>
+      <div class="score-name"><span id="jp-score" class="panel-score">0</span>중국<img
+          src="//upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Flag_of_the_People%27s_Republic_of_China.svg/225px-Flag_of_the_People%27s_Republic_of_China.svg.png"
+          alt="flag" width="40%"></div>
     </div>
     <div id="score-text">
-    Shoot 버튼을 클릭해서 진행합니다.
+      Shoot 버튼을 클릭해서 진행합니다.
     </div>
   </div>
   <div class="control-panel">
@@ -29,7 +32,7 @@
       <div class="panel-name">컴퓨터</div>
       <button onclick="onJapenShoot()" class="btn-japen" disabled> Shoot</button>
     </div>
-    <div class="div-reset" >
+    <div class="div-reset">
       <button onclick="onReset()" class="btn-reset" disabled style="margin-top: 3rem;">다시하기</button>
     </div>
   </div>
