--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,11 @@
 <link rel="stylesheet" type="text/css"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-<link rel="stylesheet" type="text/css" href="./stylesheet/index.css">
+<link rel="stylesheet" type="text/css" href="./stylesheet/index.min.css">
 
 <body>
   <div class="wrapper">
-    <article style="overflow: scroll !important">
+    <article>
       <div>
         <% include header %>
       </div>
@@ -128,7 +128,7 @@
 <script type="text/javascript" src="./scripts/Winwheel.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 
-<script src="./scripts/script.js" charset="utf-8"></script>
+<script src="./scripts/script.min.js" charset="utf-8"></script>
 <!-- <script src="./scripts/join.js" charset="utf-8"></script> -->
 
 </html>
