--- a/public/stylesheet/pages/myPage.scss
+++ b/public/stylesheet/pages/myPage.scss
@@ -20,14 +20,28 @@
     border-collapse: separate;
     border-spacing: 0 8px;
     border: 0;
+
+    .thead-title th {
+      text-align: center ;
+  
+    }
   }
+
+  
   .table-striped tbody tr:nth-of-type(odd)  {
     background: ghostwhite !important;
-   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    text-align: center ;
+
 
   &:hover {
     background-color: rgba(0,0,0,.05) !important;
   }
-  }
+ }
+ #delete {
+  border: 0;
+  padding: 0;
+  background: 0;
+ }
 }
