--- a/views/myPage.ejs
+++ b/views/myPage.ejs
@@ -11,76 +11,62 @@
 <link rel="stylesheet" type="text/css"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="./stylesheet/index.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="./stylesheet/index.min.css">
 
+<style>
+  #myPage-home {
+    display: block !important;
+  }
+
+  .mypage-btn {
+    display: none;
+  }
+</style>
 <body style="overflow: scroll">
-    <article style="overflow: scroll !important">
-  <div>
+  <article>
+    <div>
       <% include header .profile %>
-  </div>
-  <div class="mypage si-z">
-    <div class="timeline">
-      <div class="intro-title">
-        <h1 class="">점심 메뉴 기록</h1>
     </div>
-      <div class="content">
+    <div class="mypage si-z">
+      <div class="timeline">
+        <div class="intro-title">
+          <h1 class="">점심 메뉴 기록</h1>
+        </div>
+        <div class="content">
           <table class="table table-striped table-hover">
-              <thead>
-                <tr style="background:  lightslategrey">
-                  <th width="10%">번호</th>
-                  <th width="50%">음식</th>
-                  <th width="10%">닉네임</th>
-                  <th width="20%">식사일</th>
-                  <th width="10%">삭제</th>
-                </tr>
-              </thead>
-              <tbody>
-            <% if(user && user.id)  {%>                
+            <thead>
+              <tr style="background:  lightslategrey" class="thead-title">
+                <th width="13%">번호</th>
+                <th width="40%">음식</th>
+                <th width="14%">닉네임</th>
+                <th width="20%">식사일</th>
+                <th width="13%">삭제</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% if(user && user.id)  {%>
               <% for(var i=0; i < twit.length; i++) { %>
-                  <tr>
-                    <td id="title"><%= twit[i].id %></td>                                            
-                    <td id="title"><%= twit[i].food %></td>                                                                
-                    <td id="title"><%= user.nick %></td>
-                    <td id="title"><%= twit[i].moment %></td>
-                    <td id="title">
-                        <form action="/foodsave/<%=twit[i].id%>"method="post">
-                        <input type="submit">
-                      </form>  
-                    </td>
-                  <tr>
-             <% } %>
-             <% } %>
-              </tbody>
-            </table>
-      
-      
-        
-
-
-        
-            
-
-
-
-
-                <!-- <form action="/foodsave/<%=user.id%>?_method=DELETE" method="post">
-                  <td><input type="submit" value="삭제하기"></input></td>
-              </form> -->
-
-            
-
-
-                    
-                          
-          
-
-                <!-- if user.Followers
-        for follower in user.Followers -->
+              <tr>
+                <td id="title"><%= twit[i].id %></td>
+                <td id="title"><%= twit[i].food %></td>
+                <td id="title"><%= user.nick %></td>
+                <td id="title"><%= twit[i].moment %></td>
+                <td id="title">
+                  <form action="/foodsave/<%=twit[i].id%>" method="post">
+                    <input type="submit" value="지우기" id="delete">
+                  </form>
+                </td>
+              <tr>
+                <% } %>
+                <% } %>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
-</article>
+  </article>
 </body>
 <!-- <form action="/foodsave/foodsave" method="POST">
           <div class="form-group">
@@ -90,12 +76,11 @@
           </div>
           <button type="submit" class="form-btn login-btn">음식보내기</button>               
         </form>
-      </div> -->
-
+     </div> -->
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-  <script src="https://cdn.sobekrepository.org/includes/jquery-rotate/2.2/jquery-rotate.min.js"></script>
+<script src="https://cdn.sobekrepository.org/includes/jquery-rotate/2.2/jquery-rotate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<script src="./scripts/script.js" charset="utf-8"></script>
+<script src="./scripts/script.min.js" charset="utf-8"></script>
 
 </html>
