--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
         <div class="user-name">
           <span style="padding-right:57rem;"> 안녕하세요! <%= user.nick %> 님!</span>
           <a href="/auth/logout" id="logout">로그아웃</a>
-          <a href="./myPage" id="logout" class="mypage-btn">마이페이지</a>
+          <a href="/myPage" id="logout" class="mypage-btn">마이페이지</a>
           <a href="/" id="myPage-home" style="display:none"> 홈</a>
         </div>
       </div>
