--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,8 @@
           <span class="next-btn btn"></span>
         </aside>
         <div class="info">
-          <span>본 웹사이트는 크롬브라우저 및 데스크톱 환경에 최적화 되어있습니다.</span>
+          <span style="display: block;">&nbsp;본 웹사이트는 AWS로 호스팅 되어 있습니다.</span><br>
+          <span >&nbsp;본 웹사이트는 크롬브라우저 및 데스크톱 환경에 최적화 되어있습니다.</span> 
         </div>
       </section>
       <div class="Visual_1 si-z">
