--- a/views/header.ejs
+++ b/views/header.ejs
@@ -50,7 +50,7 @@
             </div>
             <div class="input-group">
               <!-- <label for="join-email">이메일</label> -->
-              <input type="email" name="email" value="" placeholder="Email">
+              <input id="email" type="email" name="email" value="" placeholder="Email">
             </div>
             <div class="input-group">
               <!-- <label for="join-email">닉네임</label> -->
