--- a/views/myPage.ejs
+++ b/views/myPage.ejs
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="./stylesheet/index.min.css">
+<link rel="shortcut icon" href="http://13.125.26.73/img/favicon.ico">
 
 <style>
   #myPage-home {
