이메일 체크

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -51,14 +51,18 @@
             <div class="input-group">
               <!-- <label for="join-email">이메일</label> -->
               <input id="email" type="email" name="email" value="" placeholder="Email">
+              <i class="fas fa-check"></i>
             </div>
             <div class="input-group">
               <!-- <label for="join-email">닉네임</label> -->
               <input type="text" name="nick" value="" placeholder="Name">
+              <i class="fas fa-coffee fa-xs"></i>
+              <p>2자 이상 입력해주세요.</p>
             </div>
             <div class="input-group">
               <!-- <label for="join-email">비밀번호</label> -->
               <input type="password" name="password" value="" placeholder="Password">
+              <i class="fas fa-coffee fa-xs"></i>
             </div>
             <div class="form-footer">
               <button type="submit" class="form-btn login-btn">회원가입</button>
