--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,4 +1,4 @@
-  <div class="header-wrap">
+<div class="header-wrap">
     <div class="header">
       <div class="profile">
         <% if(user && user.id) { %>
@@ -11,9 +11,7 @@
         </div>
       </div>
       <% } else {%>
-        <a href="#" id="login">로그인</a>
-        <i class="fas fa-check"></i>
-        <i class="fas fa-facebook"></i>
+        <a href="#" id="login">로그인</a>        
       <div id="login-wrap" class="modal">
         <div id="login-content" class="modal-content">
           <!-- <span class="close">×</span> -->
@@ -32,8 +30,8 @@
               <input type="password" name="password" value="" required placeholder="Password">
             </div>
             <% if (loginError) %>
+            <%=  loginError %>
             <div class="error-message">
-              <%= loginError %>
             </div>
             <div class="form-footer">
               <button type="submit" class="form-btn login-btn">로그인</button>
@@ -54,18 +52,17 @@
             <div class="input-group">
               <!-- <label for="join-email">이메일</label> -->
               <input id="email" type="email" name="email" value="" placeholder="Email">
-              <i class="fas fa-check"></i>
+              <!-- <i class="fas fa-check"></i> -->
             </div>
             <div class="input-group">
               <!-- <label for="join-email">닉네임</label> -->
               <input type="text" name="nick" value="" placeholder="Name">
-              
               <p>2자 이상 입력해주세요.</p>
             </div>
             <div class="input-group">
               <!-- <label for="join-email">비밀번호</label> -->
               <input type="password" name="password" value="" placeholder="Password">
-              <i class="fas fa-coffee fa-xs"></i>
+              <!-- <i class="fas fa-coffee fa-xs"></i> -->
             </div>
             <div class="form-footer">
               <button type="submit" class="form-btn login-btn">회원가입</button>
