--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
 <link rel="stylesheet" type="text/css"
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
+<!-- <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css"> -->
 <link rel="stylesheet" type="text/css" href="./stylesheet/index.min.css">
 
 <body>
@@ -128,7 +128,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <script type="text/javascript" src="./scripts/Winwheel.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-
+<script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 <script src="./scripts/script.js" charset="utf-8"></script>
 <!-- <script src="./scripts/join.js" charset="utf-8"></script> -->
 
